fixed header z-index bug

--- a/themes/kin-athletics/sass/_header.scss
+++ b/themes/kin-athletics/sass/_header.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;  
   background-color: #A10000;
+  z-index: 99999;
 
   .main-navigation{
     text-align: right;
